<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="share_target_video_best">Download best video</string>
    <string name="share_target_audio_best">Download best audio</string>
    <string name="share_target_manual">Other downloads</string>
    <string name="share_pending_video_best">Starting download</string>
    <string name="share_pending_audio_best">Starting download</string>
    <string name="share_pending_manual_saved">Starting download</string>
    <string name="share_pending_error">Download failed.</string>
    <string name="share_overlay_title">Download options</string>
    <string name="share_overlay_close">Close</string>
    <string name="share_overlay_cancel">Cancel</string>
    <string name="share_overlay_confirm">Download</string>
    <string name="share_overlay_error">Error showing overlay: %1$s</string>
    <string name="share_overlay_invalid_payload">Unable to open the overlay.</string>
    <string name="share_overlay_permission_required">You must allow "Appear on top of other apps" to continue.</string>
    <string name="share_overlay_permission_denied">Permission not granted. Unable to show the overlay.</string>
    <string name="share_pref_title_audio_video">Audio and video</string>
    <string name="share_pref_title_only_audio">Audio only</string>
    <string name="share_pref_desc_audio_video">Tap to download audio and video</string>
    <string name="share_pref_desc_only_audio">Tap to download audio only</string>
    <string name="share_pref_title_resolution">Resolution</string>
    <string name="share_pref_desc_resolution">Choose the maximum video quality</string>
    <string name="share_pref_title_format">Video format</string>
    <string name="share_pref_desc_format">Final container of the file</string>
    <string name="share_pref_title_audio_format">Audio format</string>
    <string name="share_pref_desc_audio_format">Select the final track format</string>
    <string name="share_pref_title_audio_language">Audio</string>
    <string name="share_pref_desc_audio_language">Prefer a language when mixing tracks</string>
    <string name="share_pref_title_subtitles">Subtitles</string>
    <string name="share_pref_desc_subtitles">Select preferred subtitles</string>
    <string name="share_pref_value_best">Best available</string>
    <string name="share_pref_value_no_override">No preference</string>
    <string name="share_pref_value_all">All</string>
    <string name="share_pref_value_none">None</string>
    <string name="share_pref_value_custom">Custom...</string>
    <string name="share_pref_value_auto_audio">Keep original language</string>
    <string name="share_pref_value_lang_es">Spanish (es)</string>
    <string name="share_pref_value_lang_en">English (en)</string>
    <string name="share_pref_value_4k">4K (2160p)</string>
    <string name="share_pref_value_8k">8K (4320p)</string>
    <string name="share_pref_value_2k">2K (1440p)</string>
    <string name="share_pref_value_1080">1080p</string>
    <string name="share_pref_value_720">720p</string>
    <string name="share_pref_value_480">480p</string>
    <string name="share_pref_value_360">360p</string>
    <string name="share_pref_value_2160">2160p</string>
    <string name="share_pref_value_mkv">MKV</string>
    <string name="share_pref_value_mp4">MP4</string>
    <string name="share_pref_value_webm">WEBM</string>
    <string name="share_pref_value_mov">MOV</string>
    <string name="share_pref_value_flv">FLV</string>
    <string name="share_pref_value_avi">AVI</string>
    <string name="share_pref_dialog_resolution">Select resolution</string>
    <string name="share_pref_dialog_format">Select format</string>
    <string name="share_pref_dialog_audio_format">Select audio format</string>
    <string name="share_pref_dialog_audio_language">Select audio</string>
    <string name="share_pref_dialog_subtitles">Select subtitles</string>
    <string name="share_pref_search_hint">Search language or code</string>
    <string name="share_pref_custom_prompt">Enter a custom value</string>
    <string name="share_pref_custom_hint">Ex: en, es, 1440, etc.</string>
    <string name="share_pref_custom_save">Save</string>
    <string name="share_pref_dialog_cancel">Close</string>
</resources>
